testdata/baselines/reference/submodule/conformance/nodeModulesResolveJsonModule(module=node16).errors.txt
index.cts(5,33): error TS2339: Property 'name' does not exist on type 'string'.
index.mts(1,34): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
index.mts(3,38): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
index.mts(5,33): error TS2339: Property 'name' does not exist on type 'string'.
index.ts(1,34): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
index.ts(3,38): error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
index.ts(5,33): error TS2339: Property 'name' does not exist on type 'string'.


==== index.ts (3 errors) ====
    import pkg from "./package.json" with { type: "json" };
                                     ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
    export const name = pkg.name;
    import * as ns from "./package.json" with { type: "json" };
                                         ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
    export const thing = ns;
    export const name2 = ns.default.name;
                                    ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
==== index.cts (1 errors) ====
    import pkg from "./package.json";
    export const name = pkg.name;
    import * as ns from "./package.json";
    export const thing = ns;
    export const name2 = ns.default.name;
                                    ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
==== index.mts (3 errors) ====
    import pkg from "./package.json" with { type: "json" };
                                     ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
    export const name = pkg.name;
    import * as ns from "./package.json" with { type: "json" };
                                         ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2823: Import attributes are only supported when the '--module' option is set to 'esnext', 'nodenext', or 'preserve'.
    export const thing = ns;
    export const name2 = ns.default.name;
                                    ~~~~
!!! error TS2339: Property 'name' does not exist on type 'string'.
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "type": "module",
        "default": "misedirection"
    }